--- a/main.css
+++ b/main.css
@@ -23,9 +23,15 @@ header > section{
     justify-content: center;
 }
 header > section#logo{
+    height: 40px;
+    width: 100px;
     margin:10px;
     font-size: 1.7em;
 
+}
+#logo img{
+    width: 100%;
+    height: 100%;
 }
 header > #painel{
     display: flex;
